--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,25 @@
 <html>
   <head>
-
   </head>
   <body>
-    <img src="">
+    <h1> StudyBoard </h1>
+    Beta v0.1
+
+    <hr>
+
+    <div>
+      <p>
+        Gladwell's 1000 hour rule:
+        <q> You only need 1000 hours of hard practice to master anything in the world. </q>
+      </p>
+
+      <p> The leader of this board is: <b> {{ name_winner }}</b> (with {{duration_str}}). </p>
+    </div>
+
+    <div>
+      <img src={{path_to_chart}}>
+    </div>
+
   </body>
 
 </html>
