add contacts to the page

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
   <head>
   </head>
   <body>
-    <h1> StudyBoard </h1>
+    <h1> StudyTimeBoard </h1>
     Beta v0.1
 
     <hr>
@@ -19,6 +19,18 @@
     <div>
       <img src={{path_to_chart}}>
     </div>
+
+    <hr>
+
+    <div>
+      <p> You are very welcome to join the the STB study group, please contact wechat: zoucongyu1109. </p>
+
+      <p>You are very welcome to join the develop team of the StudyTimeBoard (this webapp), this is our repository:
+        <a href="https://github.com/Apollo1840/StudyTimeBoard">https://github.com/Apollo1840/StudyTimeBoard</a>
+      </p>
+
+    </div>
+
 
   </body>
 
