url to the google sheet

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
     <div>
       <p> You are very welcome to join the the STB study group, please contact wechat: zoucongyu1109. </p>
-
+        <a href="https://docs.google.com/spreadsheets/d/1FGoY2IrXavkyiRGZQkvTIgHwHmIrlohR-IDoQ5K4hw4/edit?usp=sharing">click here to edit the google data sheet</a>
       <p>You are very welcome to join the develop team of the StudyTimeBoard (this webapp), this is our repository:
         <a href="https://github.com/Apollo1840/StudyTimeBoard">https://github.com/Apollo1840/StudyTimeBoard</a>
       </p>
