--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="/" id="nav-home">Home<span class="sr-only">(current)</span></a>
-          <a class="nav-link" href="/" id="nav-personal-analysis">Personal Analysis</a>
-          <a class="nav-link" href="/About" id="nav-about">About</a>
+          <a class="nav-link" href="/personal_analysis" id="nav-personal-analysis">Personal Analysis</a>
+          <a class="nav-link" href="/about" id="nav-about">About</a>
           <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
         </div>
       </div>
