new personal chart2

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,16 @@
   <body>
 
     <div>
-      Author: Congyu Zou
+      <p> Author: Congyu Zou </p>
+
+      <p> Develop history: </p>
+      <ul>
+        <li>Beta v0.1: Basic studytime leaderboard</li>
+        <li>Beta v0.2: + boostrap page style and weekly leaderboard.</li>
+        <li>Beta v0.3: + personal study time report.</li>
+        <li>Beta v0.3.1: + new study event chart.</li>
+      </ul>
+
     </div>
 
     <hr>
