--- a/templates/personal_analysis.html
+++ b/templates/personal_analysis.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %} About {% endblock %}
+{% block title %} Personal Analysis {% endblock %}
 {% block body %}
   <body>
 
     <div style="font-size: 200%;">
       <p> Hi, {{username}}, Here is your study time analysis: </p>
-      <img src={{path_to_chart_user}}>
+      <img src={{path_umd}}>
+      <img src={{path_use}}>
     </div>
 
     <hr>
