--- a/templates/personal_analysis_login.html
+++ b/templates/personal_analysis_login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} About {% endblock %}
+{% block title %} Personal Analysis {% endblock %}
 {% block body %}
   <body>
 
