--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,14 @@
   <div style="font-size: 200%;">
     <p> (NEW!) Leaderboard of the last week: </p>
     <img src={{path_to_chart_last_week}}>
+    <!-- {{chart_html|safe}} -->
+
   </div>
 
   <br />
 
 
-    <!-- quote -->
+  <!-- quote -->
   <div class="container">
     <blockquote class="blockquote text-right">
       <p class="mb-0">You only need 1000 hours of hard practice to master anything in the world.</p>
