--- a/templates/personal_analysis_login.html
+++ b/templates/personal_analysis_login.html
@@ -15,7 +15,7 @@
 
           <div class="form-group">
             <label>Password</label>
-            <input type="password" class="form-control" name="username">
+            <input type="password" class="form-control" name="password">
           </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
