--- a/studytimeboard/templates/personal_analysis.html
+++ b/studytimeboard/templates/personal_analysis.html
@@ -1,8 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'layout.html' %}
 
 {% block title %} Personal Analysis {% endblock %}
-{% block body %}
-  <body>
+{% block content %}
 
     <div style="font-size: 200%;">
       <p> Hi, {{username}}, Here is your study time analysis: </p>
@@ -20,7 +19,6 @@
       </p>
 
     </div>
-  </body>
 
 {% endblock %}
 
