--- a/studytimeboard/templates/about.html
+++ b/studytimeboard/templates/about.html
@@ -1,33 +1,34 @@
-{% extends 'base.html' %}
+{% extends 'layout.html' %}
 
 {% block title %} About {% endblock %}
-{% block body %}
-  <body>
+{% block content %}
 
-    <div>
-      <p> Author: Congyu Zou </p>
 
-      <p> Develop history: </p>
-      <ul>
+<div>
+    <p> Author: Congyu Zou </p>
+
+    <p> Develop history: </p>
+    <ul>
         <li>Beta v0.1: Basic studytime leaderboard</li>
         <li>Beta v0.2: + boostrap page style and weekly leaderboard.</li>
         <li>Beta v0.3: + personal study time report.</li>
         <li>Beta v0.3.1: + new study event chart.</li>
-      </ul>
+        <li>Beta v0.3.9: + add in-app data input.</li>
+    </ul>
 
-    </div>
+</div>
 
-    <hr>
+<hr>
 
-    <div>
-      <p> You are very welcome to join the the STB study group, please contact wechat: zoucongyu1109. </p>
-        <a href="https://docs.google.com/spreadsheets/d/1FGoY2IrXavkyiRGZQkvTIgHwHmIrlohR-IDoQ5K4hw4/edit?usp=sharing">click here to edit the google data sheet</a>
-      <p>You are very welcome to join the develop team of the StudyTimeBoard (this webapp), this is our repository:
+<div>
+    <p> You are very welcome to join the the STB study group, please contact wechat: zoucongyu1109. </p>
+    <a href="https://docs.google.com/spreadsheets/d/1FGoY2IrXavkyiRGZQkvTIgHwHmIrlohR-IDoQ5K4hw4/edit?usp=sharing">click
+        here to edit the google data sheet</a>
+    <p>You are very welcome to join the develop team of the StudyTimeBoard (this webapp), this is our repository:
         <a href="https://github.com/Apollo1840/StudyTimeBoard">https://github.com/Apollo1840/StudyTimeBoard</a>
-      </p>
+    </p>
 
-    </div>
-  </body>
+</div>
 
 {% endblock %}
 
@@ -37,4 +38,5 @@
      $(".active").removeClass("active");
      $("#nav-about").addClass("active");
   });
+
 </script>
