--- a/studytimeboard/templates/personal_analysis_login.html
+++ b/studytimeboard/templates/personal_analysis_login.html
@@ -1,8 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'layout.html' %}
 
 {% block title %} Personal Analysis {% endblock %}
-{% block body %}
-  <body>
+{% block content %}
 
     <br>
 
@@ -19,6 +18,7 @@
           </div>
 
         <button type="submit" class="btn btn-primary">Submit</button>
+
     </form>
 
     <div style={{name_warning}}>Sorry, there is no such user. </div>
@@ -33,7 +33,6 @@
       </p>
 
     </div>
-  </body>
 
 {% endblock %}
 
