--- a/studytimeboard/templates/about.html
+++ b/studytimeboard/templates/about.html
@@ -13,7 +13,8 @@
         <li>Beta v0.2: + boostrap page style and weekly leaderboard.</li>
         <li>Beta v0.3: + personal study time report.</li>
         <li>Beta v0.3.1: + new study event chart.</li>
-        <li>Beta v0.3.9: + add in-app data input.</li>
+        <li>Beta v0.3.9: + in-app data input.</li>
+        <li>Beta v0.4.0: Enable true login.</li>
     </ul>
 
 </div>
