--- a/studytimeboard/templates/layout.html
+++ b/studytimeboard/templates/layout.html
@@ -3,70 +3,95 @@
 
 <head>
 
-  <title>{% block title %} {% endblock %}</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link href="{{url_for('static', filename = 'css/bootstrap.min.css')}}" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+    <link href="{{url_for('static', filename = 'css/bootstrap.min.css')}}" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">StudyTimeBoard
-      <div style="font-size:50%;color:gray;">(Beta v0.3.9)</div>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="/" id="nav-home">Home<span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="/personal_analysis" id="nav-personal-analysis">Personal Analysis</a>
-        <a class="nav-link" href="/about" id="nav-about">About</a>
-        <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-      </div>
-    </div>
-  </nav>
+    <title>{% block title %} {% endblock %}</title>
 
 </head>
 
 
 <body>
-  <main role="main" class="container">
-    <div class="row">
+    <header class="site-header">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">StudyTimeBoard
+                <div style="font-size:50%;color:gray;">(Beta v0.4.0)</div>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav mr-auto">
+                    <a class="nav-link" href="/" id="nav-home">Home<span class="sr-only">(current)</span></a>
+                    <!--  <a class="nav-link" href="/personal_analysis" id="nav-personal-analysis">Personal Analysis</a> -->
+                    <a class="nav-link" href="/about" id="nav-about">About</a>
+                    <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
+                </div>
 
-      <!--- <div class="col-md-8">  --->
-      <div class="col">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-            {% for category, message in messages %}
-              <div class="alert alert-{{ category }}">
-              {{ message }}
-              </div>
-            {% endfor %}
-          {% endif %}
-        {% endwith %}
+                <!-- Navbar Right Side -->
+                <div class="navbar-nav">
+                    {% if current_user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{{ url_for('analysis') }}">Personal Analysis</a>
+                    <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                    {% else %}
+                    <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                    <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                    {% endif %}
+                </div>
 
-        {% block content %}{% endblock %}
-      </div>
-
-      <!---
-          <div class="col-md-4">
-            <div class="content-section">
-              <h3>Our Sidebar</h3>
-              <p class='text-muted'>You can put any information here you'd like.
-                <ul class="list-group">
-                  <li class="list-group-item list-group-item-light">Latest Posts</li>
-                  <li class="list-group-item list-group-item-light">Announcements</li>
-                  <li class="list-group-item list-group-item-light">Calendars</li>
-                  <li class="list-group-item list-group-item-light">etc</li>
-                </ul>
-              </p>
             </div>
-          </div>
-          --->
+        </nav>
+    </header>
 
-    </div>
-  </main>
+    <main role="main" class="container">
+        <div class="row">
+
+            <!--- <div class="col-md-8">  --->
+            <div class="col mt-3">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            <div class="alert alert-{{ category }}">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+
+
+            </div>
+
+
+
+            <!---
+                <div class="col-md-4">
+                  <div class="content-section">
+                    <h3>Our Sidebar</h3>
+                    <p class='text-muted'>You can put any information here you'd like.
+                      <ul class="list-group">
+                        <li class="list-group-item list-group-item-light">Latest Posts</li>
+                        <li class="list-group-item list-group-item-light">Announcements</li>
+                        <li class="list-group-item list-group-item-light">Calendars</li>
+                        <li class="list-group-item list-group-item-light">etc</li>
+                      </ul>
+                    </p>
+                  </div>
+                </div>
+                --->
+
+        </div>
+
+        <div class=row">
+            {% block content %}{% endblock %}
+        </div>
+
+    </main>
 
 </body>
 
