--- a/studytimeboard/templates/about.html
+++ b/studytimeboard/templates/about.html
@@ -15,19 +15,9 @@
         <li>Beta v0.3.1: + new study event chart.</li>
         <li>Beta v0.3.9: + in-app data input.</li>
         <li>Beta v0.4.0: Enable true login.</li>
+        <li>Beta v0.4.1: Upgrade the layouts on desktop as well as mobile version.</li>
+        <li>Beta v0.4.2: User experience improvement on home page</li>
     </ul>
-
-</div>
-
-<hr>
-
-<div>
-    <p> You are very welcome to join the the STB study group, please contact wechat: zoucongyu1109. </p>
-    <a href="https://docs.google.com/spreadsheets/d/1FGoY2IrXavkyiRGZQkvTIgHwHmIrlohR-IDoQ5K4hw4/edit?usp=sharing">click
-        here to edit the google data sheet</a>
-    <p>You are very welcome to join the develop team of the StudyTimeBoard (this webapp), this is our repository:
-        <a href="https://github.com/Apollo1840/StudyTimeBoard">https://github.com/Apollo1840/StudyTimeBoard</a>
-    </p>
 
 </div>
 
