--- a/studytimeboard/templates/home.html
+++ b/studytimeboard/templates/home.html
@@ -34,22 +34,50 @@
         <!-- username row -->
         {% if current_user.is_authenticated %}
             <div class="row">
-                <p>Hi {{current_user.username}},
-                    record your study time,  then you can compete with others, or watch your analysis (right-top corner). </p>
+                <div class="ml-3 mb-5">
+                    <p>Hi <b>{{current_user.username}}</b>,
+                    record your study time,  then you can
+                        <a href="{{url_for('leaderboard')}}">compete with others</a>
+                        , or
+                        <a href="{{url_for('analysis')}}">watch your analysis</a>
+                        (right-top corner). </p>
+                </div>
             </div>
 
         {% else %}
             <div class="row">
-                <div class="input-group mb-5">
+                <div class="input-group mb-5 ml-3 mr-3">
                     <div></div>
                     <input type="text" class="form-control" placeholder="Type here your username" name="username">
                 </div>
             </div>
         {% endif %}
 
+        <!-- go hold row -->
+        <div class="row">
+            <p style="color: #AAA" class="ml-3">  Clic"Go“ or ”Hold“ when you start or end the study period: </p>
+        </div>
+        <div class="row">
+
+            <div class="col text-center">
+                <button type="submit" class="btn btn-outline-primary" style="width: 100px; height:100px; font-size:140%; border-radius: 50%;" name="go">Go</button>
+            </div>
+
+            <div class="col text-center">
+                <button type="submit" class="btn btn-outline-primary" style="width: 100px; height:100px; font-size:140%; border-radius: 50%;" name="hold">Hold</button>
+            </div>
+
+        </div>
+
+
+        <hr/>
+
         <!-- start end time row -->
         <div class="row">
-            <div class="col input-group mb-5">
+            <p  style="color: #AAA" class="ml-3">  Or input concrete time interval: </p>
+        </div>
+        <div class="row">
+            <div class="col input-group mb-3 mr-5">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">start time</span>
                 </div>
@@ -57,7 +85,7 @@
 
             </div>
 
-            <div class="col input-group mb-5">
+            <div class="col input-group mb-3 ml-5">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon2">end time</span>
                 </div>
@@ -65,39 +93,32 @@
 
             </div>
 
-            <div class="col">
+            <div class="col mb-3">
                 <button type="submit" class="btn btn-primary float-right mr-2">Submit</button>
             </div>
 
         </div>
 
-        <!-- go hold row -->
-        <div class="row">
 
-            <div class="col text-center">
-                <button type="submit" class="btn btn-outline-primary" style="width: 95%;" name="go">Go</button>
-            </div>
 
-            <div class="col text-center">
-                <button type="submit" class="btn btn-outline-primary" style="width: 95%;" name="hold">Hold</button>
-            </div>
-
-        </div>
 
 
     </div>
 
 </form>
 
-<br/>
-<br/>
-<br/>
-<br/>
+<br>
+<hr/>
+<br>
+
 
 <!-- chart last week display -->
 
-<div style="font-size: 200%;">
+<div style="font-size: 120%;">
     <p> Leaderboard of the last week: </p>
+    <div>
+        <p> The leader of this board is:<b> {{ name_winner }}</b> (with {{duration_str}})</p>
+    </div>
     <div class="text-center">
         <img src={{path_to_chart_last_week}} width="100%" height="100%">
         <!-- {{chart_html|safe}} -->
@@ -105,38 +126,6 @@
 
 </div>
 
-<br/>
-
-
-
-
-
-<!-- honor display -->
-<div style="font-size: 200%;">
-    <p> Leaderboard of the entire time: </p>
-    <p> The leader of this board is:<b> {{ name_winner }}</b> (with {{duration_str}})</p>
-</div>
-
-
-<!-- chart display -->
-<div class="text-center">
-    <img src={{path_to_chart_all}} width="100%" height="200%">
-</div>
-
-<hr>
-
-
-<!-- contacts -->
-<div>
-    <p> You are very welcome to join the the STB study group, please contact wechat: zoucongyu1109. </p>
-    <a href="https://docs.google.com/spreadsheets/d/1FGoY2IrXavkyiRGZQkvTIgHwHmIrlohR-IDoQ5K4hw4/edit?usp=sharing">click
-        here to edit the google data sheet</a>
-    <p>You are very welcome to join the develop team of the StudyTimeBoard (this webapp), this is our
-        repository:
-        <a href="https://github.com/Apollo1840/StudyTimeBoard">https://github.com/Apollo1840/StudyTimeBoard</a>
-    </p>
-
-</div>
 
 {% endblock %}
 
@@ -145,11 +134,5 @@
     $(".active").removeClass("active");
     $("#nav-home").addClass("active");
   });
-
-
-
-
-
-
 
 </script>
