--- a/studytimeboard/templates/layout.html
+++ b/studytimeboard/templates/layout.html
@@ -17,81 +17,114 @@
 
 
 <body>
-    <header class="site-header">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">StudyTimeBoard
-                <div style="font-size:50%;color:gray;">(Beta v0.4.0)</div>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav mr-auto">
-                    <a class="nav-link" href="/" id="nav-home">Home<span class="sr-only">(current)</span></a>
-                    <!--  <a class="nav-link" href="/personal_analysis" id="nav-personal-analysis">Personal Analysis</a> -->
-                    <a class="nav-link" href="/about" id="nav-about">About</a>
-                    <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
-                </div>
-
-                <!-- Navbar Right Side -->
-                <div class="navbar-nav">
-                    {% if current_user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{{ url_for('analysis') }}">Personal Analysis</a>
-                    <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
-                    {% else %}
-                    <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                    <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
-                    {% endif %}
-                </div>
-
-            </div>
-        </nav>
-    </header>
-
-    <main role="main" class="container">
-        <div class="row">
-
-            <!--- <div class="col-md-8">  --->
-            <div class="col mt-3">
-                {% with messages = get_flashed_messages(with_categories=true) %}
-                    {% if messages %}
-                        {% for category, message in messages %}
-                            <div class="alert alert-{{ category }}">
-                                {{ message }}
-                            </div>
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
-
-
+<header class="site-header">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">StudyTimeBoard
+            <div style="font-size:50%;color:gray;">(Beta v0.4.2)</div>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav mr-auto">
+                <a class="nav-link" href="/" id="nav-home">Home<span class="sr-only">(current)</span></a>
+                <!--  <a class="nav-link" href="/personal_analysis" id="nav-personal-analysis">Personal Analysis</a> -->
+                <a class="nav-link" href="/leaderboard" id="nav-leaderboard">Leaderboard</a>
+                <a class="nav-link" href="/about" id="nav-about">About</a>
+                <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
             </div>
 
+            <!-- Navbar Right Side -->
+            <div class="navbar-nav">
+                {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('analysis') }}">Personal Analysis</a>
+                <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                {% else %}
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                {% endif %}
+            </div>
 
+        </div>
+    </nav>
+</header>
 
-            <!---
-                <div class="col-md-4">
-                  <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
-                      <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Posts</li>
-                        <li class="list-group-item list-group-item-light">Announcements</li>
-                        <li class="list-group-item list-group-item-light">Calendars</li>
-                        <li class="list-group-item list-group-item-light">etc</li>
-                      </ul>
-                    </p>
-                  </div>
-                </div>
-                --->
+<main role="main" class="container">
+    <div class="row">
+
+        <!--- <div class="col-md-8">  --->
+        <div class="col mt-3">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">
+                {{ message }}
+            </div>
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
+
 
         </div>
 
-        <div class=row">
-            {% block content %}{% endblock %}
-        </div>
 
-    </main>
+        <!---
+            <div class="col-md-4">
+              <div class="content-section">
+                <h3>Our Sidebar</h3>
+                <p class='text-muted'>You can put any information here you'd like.
+                  <ul class="list-group">
+                    <li class="list-group-item list-group-item-light">Latest Posts</li>
+                    <li class="list-group-item list-group-item-light">Announcements</li>
+                    <li class="list-group-item list-group-item-light">Calendars</li>
+                    <li class="list-group-item list-group-item-light">etc</li>
+                  </ul>
+                </p>
+              </div>
+            </div>
+            --->
+
+    </div>
+
+    <div class=row">
+        {% block content %}{% endblock %}
+    </div>
+
+
+</main>
+
+<!-- contacts -->
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+
+<footer style="font-size: 80%; background-color: gray; color:white;">
+
+    <br/>
+
+    <div class="row mt-3 ml-3 mr-3 mb-5">
+
+    <p> You are very welcome to join the the STB study group, please contact wechat: zoucongyu1109. </p>
+
+    <a href="https://docs.google.com/spreadsheets/d/1FGoY2IrXavkyiRGZQkvTIgHwHmIrlohR-IDoQ5K4hw4/edit?usp=sharing">
+         click here to edit the google data sheet
+    </a>
+
+    </div>
+
+    <div class="row ml-3 mr-3 mb-5">
+    <p>You are very welcome to join the develop team of the StudyTimeBoard (this webapp), this is our repository: </p>
+    <a href="https://github.com/Apollo1840/StudyTimeBoard">
+        https://github.com/Apollo1840/StudyTimeBoard
+    </a>
+    </div>
+
+    <br/>
+
+</footer>
 
 </body>
 
