--- a/studytimeboard/templates/personal_analysis.html
+++ b/studytimeboard/templates/personal_analysis.html
@@ -3,21 +3,10 @@
 {% block title %} Personal Analysis {% endblock %}
 {% block content %}
 
-    <div style="font-size: 200%;">
+    <div style="font-size: 120%;">
       <p> Hi, {{username}}, Here is your study time analysis: </p>
-      <img src={{path_umd}}>
-      <img src={{path_use}}>
-    </div>
-
-    <hr>
-
-    <div>
-      <p> You are very welcome to join the the STB study group, please contact wechat: zoucongyu1109. </p>
-        <a href="https://docs.google.com/spreadsheets/d/1FGoY2IrXavkyiRGZQkvTIgHwHmIrlohR-IDoQ5K4hw4/edit?usp=sharing">click here to edit the google data sheet</a>
-      <p>You are very welcome to join the develop team of the StudyTimeBoard (this webapp), this is our repository:
-        <a href="https://github.com/Apollo1840/StudyTimeBoard">https://github.com/Apollo1840/StudyTimeBoard</a>
-      </p>
-
+      <img src={{path_umd}} width="100%" height="100%">
+      <img src={{path_use}} width="100%" height="100%">
     </div>
 
 {% endblock %}
