start sql db and update this week leaderboard

--- a/studytimeboard/templates/home.html
+++ b/studytimeboard/templates/home.html
@@ -120,7 +120,7 @@
         <p> The leader of this board is:<b> {{ name_winner }}</b> (with {{duration_str}})</p>
     </div>
     <div class="text-center">
-        <img src={{path_to_chart_last_week}} width="100%" height="100%">
+        <img src={{path_to_chart_lastweek}} width="100%" height="100%">
         <!-- {{chart_html|safe}} -->
     </div>
 
