--- a/studytimeboard/templates/leaderboard.html
+++ b/studytimeboard/templates/leaderboard.html
@@ -13,7 +13,7 @@
         <p> The leader of this board is:<b> {{ name_winner_lastweek }}</b> (with {{duration_str_lastweek}})</p>
     </div>
     <div class="text-center">
-        <img src={{path_to_chart_last_week}} width="100%" height="100%">
+        <img src={{path_to_chart_lastweek}} width="100%" height="100%">
         <!-- {{chart_html|safe}} -->
     </div>
 
