try to show user status

--- a/studytimeboard/templates/home.html
+++ b/studytimeboard/templates/home.html
@@ -54,18 +54,31 @@
         {% endif %}
 
         <!-- go hold row -->
-        <div class="row">
-            <p style="color: #AAA" class="ml-3">  Clic"Go“ or ”Hold“ when you start or end the study period: </p>
+        <div class="row" style="color: #AAA">
+            <p class="ml-3">  Click "Go“ or ”Hold“ when you start or end the study period: </p>
+
+            {% if user_status == "go" %}
+                <p class="ml-3">  You have started {{user_status_time}} ago. So please click "Go" .</p>
+            {% endif %}
+
+            {% if user_status == "hold" %}
+                <p class="ml-3">  You have holded {{user_status_time}} ago. So please click "Hold" .</p>
+            {% endif %}
+
+
         </div>
+
         <div class="row">
 
             <div class="col text-center">
                 <button type="submit" class="btn btn-outline-primary" style="width: 100px; height:100px; font-size:140%; border-radius: 50%;" name="go">Go</button>
             </div>
 
-            <div class="col text-center">
-                <button type="submit" class="btn btn-outline-primary" style="width: 100px; height:100px; font-size:140%; border-radius: 50%;" name="hold">Hold</button>
-            </div>
+            {% if user_status != "hold" %}
+                <div class="col text-center">
+                    <button type="submit" class="btn btn-outline-primary" style="width: 100px; height:100px; font-size:140%; border-radius: 50%;" name="hold">Hold</button>
+                </div>
+            {% endif %}
 
         </div>
 
