--- a/studytimeboard/templates/about.html
+++ b/studytimeboard/templates/about.html
@@ -17,6 +17,11 @@
         <li>Beta v0.4.0: Enable true login.</li>
         <li>Beta v0.4.1: Upgrade the layouts on desktop as well as mobile version.</li>
         <li>Beta v0.4.2: User experience improvement on home page</li>
+        <li>Beta v0.4.5:
+            User experience improvement on home page, smart "go or hold" decision;
+            show today's study king and his study event stream;
+            leaderboard of one week in home page differ from today and not today;
+            leaderboard of one week in leaderboard page improved to show each weekday.</li>
     </ul>
 
 </div>
