--- a/studytimeboard/templates/home.html
+++ b/studytimeboard/templates/home.html
@@ -62,7 +62,7 @@
 
             <div class="row" style="color: #AAA">
                 <p class="ml-3">
-                    Click "Hold" when you have no energy and want a break. click "Go" if you forget to hold last time .
+                    Click <b>"Hold"</b> when you have no energy and want a break. click "Go" if you forget to hold last time .
                 </p>
             </div>
         {% endif %}
